--- a/site/index.html
+++ b/site/index.html
@@ -3,9 +3,30 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Hello Coursera!</title>
+	<title>Assignment Solution for Module 2</title>
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
-	<h1>Hello Coursera. It's a great course</h1>
+	<h1>Our Menu</h1>
+	<div class="row">
+		<div class="col col-lg-4 col-mg-6">
+			<div class="header pink">Chicken</div>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi in neque ut metus finibus faucibus. Duis cursus risus ligula. Cras tortor quam, iaculis sed purus et, fermentum dapibus turpis. Curabitur nec hendrerit dui. Nullam ligula elit, vestibulum non eros nec, rutrum finibus nulla. Maecenas in fringilla lacus, vitae tempus magna. Vestibulum porta cursus orci, eu eleifend ligula pulvinar
+			</p>
+		</div>
+		<div class="col col-lg-4 col-mg-6">
+			<div class="header red">Beef</div>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi in neque ut metus finibus faucibus. Duis cursus risus ligula. Cras tortor quam, iaculis sed purus et, fermentum dapibus turpis. Curabitur nec hendrerit dui. Nullam ligula elit, vestibulum non eros nec, rutrum finibus nulla. Maecenas in fringilla lacus, vitae tempus magna. Vestibulum porta cursus orci, eu eleifend ligula pulvinar
+			</p>
+		</div>
+		<div class="col col-lg-4 col-mg-12">
+			<div class="header hardal">Sushi</div>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi in neque ut metus finibus faucibus. Duis cursus risus ligula. Cras tortor quam, iaculis sed purus et, fermentum dapibus turpis. Curabitur nec hendrerit dui. Nullam ligula elit, vestibulum non eros nec, rutrum finibus nulla. Maecenas in fringilla lacus, vitae tempus magna. Vestibulum porta cursus orci, eu eleifend ligula pulvinar
+			</p>
+		</div>
+	</div>
 </body>
 </html>
